--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_bloc : ^8.0.1
   dio: ^4.0.6
   conditional_builder_null_safety: ^0.0.6
+  hexcolor: ^2.0.7
+  shared_preferences: ^2.0.15
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
