--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   hexcolor: ^2.0.7
   shared_preferences: ^2.0.15
   webview_flutter: ^3.0.4
-
+  fl_country_code_picker: ^0.0.3+1
+  carousel_slider: ^4.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
