--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   webview_flutter: ^3.0.4
   fl_country_code_picker: ^0.0.3+1
   carousel_slider: ^4.1.1
+  fluttertoast: ^8.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
